# eyewaz-backend

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  Eyewaz.postman_collection.json  Procfile.windows  README.md  app.py  elevenlabs_api.py  generate_key.py  helpers.py  mailer.py  paypal_api.py  requirements.txt  routes.py  selfhost_tts.py  server.py  storage.py  stripe_api.py  usage.py  webauthn_api.py
SampleCode/: EyeWasWord.docx  IDed.py  converter.py  extract_text_image.py  extract_text_pdf.py  imgtospeech.py  imgtospeech_test.py  speech.py  speech_test.py  translator.py
android-tts/: .gitignore  README.md  build.gradle.kts  secrets.properties.example  settings.gradle.kts
database/: models.py
docs/: GO-LIVE.md  MOBILE-APP.md  PLAY-RELEASE.md  PRIVACY-POLICY.md  QA-REGRESSION.md  STORE-SUBMISSION.md  VOICE-BANK-ONLINE.md  play-testers-README.md  play-testers.csv.example
extensions/: README.md
mobile/: capacitor.config.json  package.json
resources/: account.py  assistant.py  auth_oauth.py  billing.py  dialects.py  documents.py  folder.py  image.py  jobs.py  playback.py  speech.py  test.py  testpdf.py  user.py  voicebank.py  web.py  webauthn_res.py
templates/: index.html
tts-local/: README.md  piper_server.py
tts-service/: Dockerfile  README.md  app.py  normalize_urdu.py  render.yaml  requirements.txt
tts-train/: EYEWAZ_train.ipynb  README.md  prepare_dataset.py  (+5 more)
windows-sapi/: CMakeLists.txt  README.md
windows-sapi/register/: install.ps1
windows-sapi/src/: EyewazTts.def  EyewazTtsEngine.cpp  EyewazTtsEngine.h  dll.cpp  guids.h
(+55 files in other folders)
